<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tringle"
    tools:context=".Triangle1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:background="@color/backcroundBlack"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_Triangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:text="@string/triangle"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_TriangleBase"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/base"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_Triangle_height"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_TriangleCalc"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:backgroundTint="#EDACC2"
            android:fontFamily="casual"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>